RESOLVED FIXED197663
[GTK][WPE] Cannot build documentation with gtk-doc
https://bugs.webkit.org/show_bug.cgi?id=197663
Summary [GTK][WPE] Cannot build documentation with gtk-doc
Adrian Perez
Reported 2019-05-07 09:03:08 PDT
The following error prevents gtk-doc from generating the HTML output: [840/840] Generating ../../WebKit2WebExtension-4.0.typelib samu: job failed: cd /home/aperez/devel/WebKit/build-jsc && /usr/bin/cmake -E env CC=/usr/lib/ccache/bin/cc "CFLAGS=-fdiagnostics-color=always -Wextra -Wall -Wno-expansion-to-defined -Wno-psabi -Wno-maybe-uninitialized -Wwrite-strings -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -fno-strict-aliasing -fno-exceptions -Wno-unused-parameter" /home/aperez/devel/WebKit/Tools/gtkdoc/generate-gtkdoc --gtk && touch docs-build.stamp html/jsc-glib-4.0/JSCValue.html:2306: warning: no link for: "api-index-2.26" -> (2.26). html/webkitdomgtk-4.0/WebKitDOMAttr.html:380: warning: no link for: "api-index-2.14" -> (2.14). html/webkitdomgtk-4.0/WebKitDOMDOMSelection.html:381: warning: no link for: "api-index-2.16" -> (2.16). html/webkitdomgtk-4.0/WebKitDOMDocument.html:1561: warning: no link for: "api-index-2.12" -> (2.12). html/webkitdomgtk-4.0/WebKitDOMDocument.html:1886: warning: no link for: "WebKitDOMNodeFilter" -> (<span class="type">WebKitDOMNodeFilter</span>). html/webkitdomgtk-4.0/WebKitDOMDocument.html:2055: warning: no link for: "WebKitDOMXPathNSResolver" -> (<span class="type">WebKitDOMXPathNSResolver</span>). html/webkitdomgtk-4.0/WebKitDOMDocument.html:4267: warning: no link for: "WebKitDOMEntityReference" -> (<span class="type">WebKitDOMEntityReference</span>). html/webkitdomgtk-4.0/WebKitDOMElement.html:2654: warning: no link for: "WebKitDOMClientRect" -> (<span class="type">WebKitDOMClientRect</span>). html/webkitdomgtk-4.0/WebKitDOMElement.html:2677: warning: no link for: "api-index-2.18" -> (2.18). html/webkitdomgtk-4.0/WebKitDOMElement.html:2707: warning: no link for: "WebKitDOMClientRectList" -> (<span class="type">WebKitDOMClientRectList</span>). html/webkitdomgtk-4.0/WebKitDOMElement.html:2770: warning: no link for: "api-index-2.8" -> (2.8). html/webkitdomgtk-4.0/WebKitDOMElement.html:3035: warning: no link for: "api-index-2.10" -> (2.10). html/webkitdomgtk-4.0/WebKitDOMEvent.html:193: warning: no link for: "WebKitDOMEventTarget" -> (<span class="type">WebKitDOMEventTarget</span>). html/webkitdomgtk-4.0/index-all.html:129: warning: no link for: "webkit-dom-client-rect-get-bottom" -> (webkit_dom_client_rect_get_bottom). html/webkitdomgtk-4.0/index-all.html:133: warning: no link for: "webkit-dom-client-rect-get-height" -> (webkit_dom_client_rect_get_height). html/webkitdomgtk-4.0/index-all.html:137: warning: no link for: "webkit-dom-client-rect-get-left" -> (webkit_dom_client_rect_get_left). html/webkitdomgtk-4.0/index-all.html:141: warning: no link for: "webkit-dom-client-rect-get-right" -> (webkit_dom_client_rect_get_right). html/webkitdomgtk-4.0/index-all.html:145: warning: no link for: "webkit-dom-client-rect-get-top" -> (webkit_dom_client_rect_get_top). html/webkitdomgtk-4.0/index-all.html:149: warning: no link for: "webkit-dom-client-rect-get-width" -> (webkit_dom_client_rect_get_width). html/webkitdomgtk-4.0/index-all.html:153: warning: no link for: "webkit-dom-client-rect-list-get-length" -> (webkit_dom_client_rect_list_get_length). html/webkitdomgtk-4.0/index-all.html:157: warning: no link for: "webkit-dom-client-rect-list-item" -> (webkit_dom_client_rect_list_item). html/webkitdomgtk-4.0/index-all.html:5218: warning: no link for: "WebKitDOMClientRect-struct" -> (WebKitDOMClientRect). html/webkitdomgtk-4.0/index-all.html:5222: warning: no link for: "WebKitDOMClientRect--bottom" -> (WebKitDOMClientRect:bottom). html/webkitdomgtk-4.0/index-all.html:5226: warning: no link for: "WebKitDOMClientRect--height" -> (WebKitDOMClientRect:height). html/webkitdomgtk-4.0/index-all.html:5230: warning: no link for: "WebKitDOMClientRect--left" -> (WebKitDOMClientRect:left). html/webkitdomgtk-4.0/index-all.html:5234: warning: no link for: "WebKitDOMClientRect--right" -> (WebKitDOMClientRect:right). html/webkitdomgtk-4.0/index-all.html:5238: warning: no link for: "WebKitDOMClientRect--top" -> (WebKitDOMClientRect:top). html/webkitdomgtk-4.0/index-all.html:5242: warning: no link for: "WebKitDOMClientRect--width" -> (WebKitDOMClientRect:width). html/webkitdomgtk-4.0/index-all.html:5246: warning: no link for: "WebKitDOMClientRectList-struct" -> (WebKitDOMClientRectList). html/webkitdomgtk-4.0/index-all.html:5250: warning: no link for: "WebKitDOMClientRectList--length" -> (WebKitDOMClientRectList:length). html/webkitdomgtk-4.0/webkitdomgtk-4.0-WebKitDOMHTMLBaseFontElement.html:102: warning: no link for: "WebKitDOMHTMLBaseFontElement" -> (<span class="type">WebKitDOMHTMLBaseFontElement</span>). html/webkitdomgtk-4.0/webkitdomgtk-4.0-WebKitDOMNodeFilter./home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3395: parser error : Opening and ending tag mismatch: video line 3394 and para playback support disabled.</para> ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3398: parser error : Opening and ending tag mismatch: track line 3394 and refsect2 role="since">Since: <link linkend="api-index-2.26">2.26</link></para></refsect2 ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3703: parser error : Opening and ending tag mismatch: audio line 3394 and refsect1 </refsect1> ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3705: parser error : Opening and ending tag mismatch: para line 3393 and refentry </refentry> ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3706: parser error : Premature end of data in tag refsect2 line 3390 ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3706: parser error : Premature end of data in tag refsect1 line 3176 ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3706: parser error : Premature end of data in tag refentry line 6 ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/webkit2gtk-docs.sgml:19: element include: XInclude error : could not load /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml, and no fallback was found html:180: warning: no link for: "api-index-2.6" -> (2.6). html/webkitdomgtk-4.0/webkitdomgtk-4.0-WebKitDOMNodeFilter.html:229: warning: no link for: "WebKitDOMCDataSection" -> (<span class="type">WebKitDOMCDataSection</span>). html/webkitdomgtk-4.0/webkitdomgtk-4.0-WebKitDOMNodeFilter.html:301: warning: no link for: "WebKitDOMEntity" -> (<span class="type">WebKitDOMEntity</span>). html/webkitdomgtk-4.0/webkitdomgtk-4.0-WebKitDOMNodeFilter.html:325: warning: no link for: "WebKitDOMNotation" -> (<span class="type">WebKitDOMNotation</span>). Traceback (most recent call last): File "/home/aperez/devel/WebKit/Tools/gtkdoc/generate-gtkdoc", line 254, in <module> build_gtkdoc_for_wkgtk(arguments) File "/home/aperez/devel/WebKit/Tools/gtkdoc/generate-gtkdoc", line 224, in build_gtkdoc_for_wkgtk saw_warnings = generate_documentation(webkit2_generator) File "/home/aperez/devel/WebKit/Tools/gtkdoc/generate-gtkdoc", line 158, in generate_documentation return generate_doc(generator, arguments.skip_html) File "/home/aperez/devel/WebKit/Tools/gtkdoc/generate-gtkdoc", line 145, in generate_doc generator.generate(not skip_html) File "/home/aperez/devel/WebKit/Tools/gtkdoc/gtkdoc.py", line 153, in generate self._run_gtkdoc_mkhtml() File "/home/aperez/devel/WebKit/Tools/gtkdoc/gtkdoc.py", line 379, in _run_gtkdoc_mkhtml cwd=html_dest_dir) File "/home/aperez/devel/WebKit/Tools/gtkdoc/gtkdoc.py", line 222, in _run_command "\n ".join(stderr.splitlines()))) Exception: gtkdoc-mkhtml produced a non-zero return code 6 Command: gtkdoc-mkhtml webkit2gtk-4.0 /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/webkit2gtk-docs.sgml Error output: /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3395: parser error : Opening and ending tag mismatch: video line 3394 and para playback support disabled.</para> ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3398: parser error : Opening and ending tag mismatch: track line 3394 and refsect2 role="since">Since: <link linkend="api-index-2.26">2.26</link></para></refsect2 ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3703: parser error : Opening and ending tag mismatch: audio line 3394 and refsect1 </refsect1> ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3705: parser error : Opening and ending tag mismatch: para line 3393 and refentry </refentry> ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3706: parser error : Premature end of data in tag refsect2 line 3390 ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3706: parser error : Premature end of data in tag refsect1 line 3176 ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml:3706: parser error : Premature end of data in tag refentry line 6 ^ /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/webkit2gtk-docs.sgml:19: element include: XInclude error : could not load /home/aperez/devel/WebKit/build-jsc/Documentation/webkit2gtk-4.0/xml/WebKitSettings.xml, and no fallback was found samu: subcommand failed
Attachments
Patch (1.69 KB, patch)
2019-05-07 09:08 PDT, Adrian Perez
no flags
Patch for landing (1.71 KB, patch)
2019-05-07 12:16 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2019-05-07 09:08:10 PDT
EWS Watchlist
Comment 2 2019-05-07 09:10:37 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Philippe Normand
Comment 3 2019-05-07 09:24:41 PDT
Comment on attachment 369290 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=369290&action=review Oops. My bad :/ > Source/WebKit/ChangeLog:11 > + tag names in the documentation for the WebKitSettings:enabl-media property. little typo in enabl-media ;)
Adrian Perez
Comment 4 2019-05-07 12:14:52 PDT
(In reply to Philippe Normand from comment #3) > Comment on attachment 369290 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=369290&action=review > > Oops. My bad :/ > > > Source/WebKit/ChangeLog:11 > > + tag names in the documentation for the WebKitSettings:enabl-media property. > > little typo in enabl-media ;) Nice catch. I'll fix the typo and then land the updated patch. Thanks!
Adrian Perez
Comment 5 2019-05-07 12:16:40 PDT
Created attachment 369311 [details] Patch for landing
WebKit Commit Bot
Comment 6 2019-05-07 13:29:23 PDT
Comment on attachment 369311 [details] Patch for landing Clearing flags on attachment: 369311 Committed r245027: <https://trac.webkit.org/changeset/245027>
WebKit Commit Bot
Comment 7 2019-05-07 13:29:24 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2019-05-07 13:33:30 PDT
Note You need to log in before you can comment on or make changes to this bug.