[GTK][WPE] Cannot build documentation with gtk-doc https://bugs.webkit.org/show_bug.cgi?id=197663

Reviewed by Philippe Normand.

* UIProcess/API/glib/WebKitSettings.cpp:
(webkit_settings_class_init): Escape content which gets wrongly interpreted as
SGML tags by gtk-doc as Markdown preformatted content, which fits well for the
tag names in the documentation for the WebKitSettings:enable-media property.


Canonical link: https://commits.webkit.org/211807@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245027 268f45cc-cd09-0410-ab3c-d52691b4dbfc